[package]
name = "server"
version = "0.1.0"
authors = ["TheOnlyArtz <callcraft456@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.2.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "sync"]}
aes = "0.6.0"
rsa = "0.3.0"