[package]
authors = ["TheOnlyArtz <callcraft456@gmail.com>"]
edition = "2018"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6.0"
rand = "0.8.3"
rsa = "0.3.0"
tokio = {version = "1.2.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "sync", "signal"]}
