[package]
authors = ["TheOnlyArtz <callcraft456@gmail.com>"]
edition = "2018"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.6"
rand = "0.8.3"
rsa = "0.3.0"
tokio = {version = "1.2.0", features = ["macros", "rt", "rt-multi-thread", "net", "io-util", "sync", "signal", "fs"]}
openssl = "0.10.28"
base64 = "*"